Adição da entidade eventos
