# swagger_output.json
@@ -571,6 +571,9 @@
           "404": {
             "description": "Not Found"
           },
+          "409": {
+            "description": "Conflict"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -908,7 +911,7 @@
         }
       }
     },
-    "/social-actions/": {
+    "/events/": {
       "post": {
         "description": "",
         "parameters": [
@@ -958,11 +961,19 @@
             "name": "divisionId",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "eventType",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -976,7 +987,7 @@
         }
       }
     },
-    "/social-actions/{id}": {
+    "/events/{id}": {
       "get": {
         "description": "",
         "parameters": [
@@ -1039,7 +1050,7 @@
         }
       }
     },
-    "/social-actions/{id}/persons": {
+    "/events/{id}/persons": {
       "get": {
         "description": "",
         "parameters": [
@@ -1427,6 +1438,11 @@
             "name": "divisionId",
             "in": "query",
             "type": "string"
+          },
+          {
+            "name": "eventType",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -1674,6 +1690,9 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
